Database updated. Added orders adding to database.

--- a/FoodDelivery.Domain/FoodDelivery.Domain.csproj
+++ b/FoodDelivery.Domain/FoodDelivery.Domain.csproj
@@ -72,18 +72,46 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstract\IOrderProcessor.cs" />
     <Compile Include="Abstract\IProductRepository.cs" />
+    <Compile Include="Concrete\DBOrderProcessor.cs" />
     <Compile Include="Concrete\EFDbContext.cs" />
     <Compile Include="Concrete\EFProductRepository.cs" />
     <Compile Include="Entities\Cart.cs" />
+    <Compile Include="Entities\OrderedProducts.cs" />
     <Compile Include="Entities\Product.cs" />
+    <Compile Include="Entities\Order.cs" />
+    <Compile Include="Entities\Staff.cs" />
+    <Compile Include="Migrations\202003241929597_InitialCreate.cs" />
+    <Compile Include="Migrations\202003241929597_InitialCreate.designer.cs">
+      <DependentUpon>202003241929597_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202003242040050_Migration1.cs" />
+    <Compile Include="Migrations\202003242040050_Migration1.designer.cs">
+      <DependentUpon>202003242040050_Migration1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202003280914047_AddDate.cs" />
+    <Compile Include="Migrations\202003280914047_AddDate.designer.cs">
+      <DependentUpon>202003280914047_AddDate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202003241929597_InitialCreate.resx">
+      <DependentUpon>202003241929597_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003242040050_Migration1.resx">
+      <DependentUpon>202003242040050_Migration1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003280914047_AddDate.resx">
+      <DependentUpon>202003280914047_AddDate.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
