--- a/FoodDelivery.WebUI/packages.config
+++ b/FoodDelivery.WebUI/packages.config
@@ -7,12 +7,17 @@
   <package id="Microsoft.AspNet.Mvc.ru" version="5.2.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor.ru" version="3.2.4" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages.ru" version="3.2.4" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.6.2" targetFramework="net472" />
   <package id="Moq" version="4.1.1309.1617" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net472" />
   <package id="Ninject" version="3.0.1.10" targetFramework="net472" />
   <package id="Ninject.MVC3" version="3.0.0.6" targetFramework="net472" />
   <package id="Ninject.Web.Common" version="3.0.0.7" targetFramework="net472" />
