--- a/FoodDelivery.WebUI/Web.config
+++ b/FoodDelivery.WebUI/Web.config
@@ -16,6 +16,8 @@
     <add key="owin:AppStartup" value="FoodDelivery.WebUI.IdentityConfig" />
   </appSettings>
   <system.web>
+    <customErrors mode="Off" />
+    <trust level="Full" />
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
@@ -53,6 +55,10 @@
   <connectionStrings>
     <add name="EFDbContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=FoodDelivery;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <!--<connectionStrings>
+    <add name="EFDbContext" connectionString="Server=tcp:primakov.database.windows.net,1433;Initial Catalog=FoodDelivery;Persist Security Info=False;User ID=primakov127;Password=fDj_32srGF2sotF1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+  </connectionStrings>-->
+  
 <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
