--- a/FoodDelivery.WebUI/packages.config
+++ b/FoodDelivery.WebUI/packages.config
@@ -3,6 +3,7 @@
   <package id="bootstrap" version="3.0.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
   <package id="jQuery" version="1.10.2" targetFramework="net472" />
+  <package id="jQuery.Validation" version="1.8.0.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.3" targetFramework="net472" />
@@ -18,6 +19,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages.ru" version="3.2.4" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Owin" version="4.1.0" targetFramework="net472" />
   <package id="Microsoft.Owin.Cors" version="4.1.0" targetFramework="net472" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.1.0" targetFramework="net472" />
