--- a/FoodDelivery.DesktopUI/packages.config
+++ b/FoodDelivery.DesktopUI/packages.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="9.0.0" targetFramework="net461" />
   <package id="Caliburn.Micro" version="3.2.0" targetFramework="net461" />
   <package id="Caliburn.Micro.Core" version="3.2.0" targetFramework="net461" />
+  <package id="ControlzEx" version="3.0.2.4" targetFramework="net461" />
+  <package id="MahApps.Metro" version="1.6.5" targetFramework="net461" />
+  <package id="MahApps.Metro.IconPacks" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
 </packages>
