--- a/FoodDelivery.Domain/FoodDelivery.Domain.csproj
+++ b/FoodDelivery.Domain/FoodDelivery.Domain.csproj
@@ -149,6 +149,10 @@
     <Compile Include="Migrations\202005051138395_ChangeStaffTable.designer.cs">
       <DependentUpon>202005051138395_ChangeStaffTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202005092336149_AddTotalCostToOrd.cs" />
+    <Compile Include="Migrations\202005092336149_AddTotalCostToOrd.designer.cs">
+      <DependentUpon>202005092336149_AddTotalCostToOrd.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -180,6 +184,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202005051138395_ChangeStaffTable.resx">
       <DependentUpon>202005051138395_ChangeStaffTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202005092336149_AddTotalCostToOrd.resx">
+      <DependentUpon>202005092336149_AddTotalCostToOrd.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
