Edit OrderDisplayView -> add order information.

--- a/FoodDelivery.DesktopUI.Library/FoodDelivery.DesktopUI.Library.csproj
+++ b/FoodDelivery.DesktopUI.Library/FoodDelivery.DesktopUI.Library.csproj
@@ -56,7 +56,10 @@
     <Compile Include="Models\ErrorModel.cs" />
     <Compile Include="Models\ILoggedInUserModel.cs" />
     <Compile Include="Models\LoggedInUserModel.cs" />
+    <Compile Include="Models\OrderedProductsModel.cs" />
     <Compile Include="Models\OrderModel.cs" />
+    <Compile Include="Models\ProductModel.cs" />
+    <Compile Include="Models\StaffModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
