--- a/FoodDelivery.WebUI/FoodDelivery.WebUI.csproj
+++ b/FoodDelivery.WebUI/FoodDelivery.WebUI.csproj
@@ -191,6 +191,7 @@
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\WebAPI\AdminController.cs" />
     <Compile Include="Controllers\WebAPI\OrderController.cs" />
+    <Compile Include="Controllers\WebAPI\ProductController.cs" />
     <Compile Include="Controllers\WebAPI\StaffController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
