--- a/FoodDelivery.WebUI/packages.config
+++ b/FoodDelivery.WebUI/packages.config
@@ -14,8 +14,11 @@
   <package id="Microsoft.AspNet.Razor.ru" version="3.2.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client.ru" version="5.2.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Core.ru" version="5.2.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.WebHost.ru" version="5.2.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages.ru" version="3.2.4" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net472" />
