--- a/FoodDelivery.WebUI/Web.config
+++ b/FoodDelivery.WebUI/Web.config
@@ -62,6 +62,9 @@
   <!--<connectionStrings>
     <add name="EFDbContext" connectionString="Server=tcp:primakov.database.windows.net,1433;Initial Catalog=FoodDelivery;Persist Security Info=False;User ID=primakov127;Password=fDj_32srGF2sotF1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>-->
+  <!--<connectionStrings>
+    <add name="EFDbContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Test;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>-->
   
 <system.webServer>
     <handlers>
