--- a/FoodDelivery.DesktopUI.Library/FoodDelivery.DesktopUI.Library.csproj
+++ b/FoodDelivery.DesktopUI.Library/FoodDelivery.DesktopUI.Library.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.AspNet.SignalR.Client, Version=2.4.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.SignalR.Client.2.4.1\lib\net45\Microsoft.AspNet.SignalR.Client.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -40,6 +43,7 @@
     <Reference Include="System.Net.Http.Formatting, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.7\lib\net45\System.Net.Http.Formatting.dll</HintPath>
     </Reference>
+    <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -56,6 +60,8 @@
     <Compile Include="Api\IAPIHelper.cs" />
     <Compile Include="Api\ICallEndpoint.cs" />
     <Compile Include="Api\ICookEndpoint.cs" />
+    <Compile Include="Api\ISignalrService.cs" />
+    <Compile Include="Api\SignalrService.cs" />
     <Compile Include="Models\AuthenticatedUser.cs" />
     <Compile Include="Models\ErrorModel.cs" />
     <Compile Include="Models\ILoggedInUserModel.cs" />
