--- a/FoodDelivery.WebUI/packages.config
+++ b/FoodDelivery.WebUI/packages.config
@@ -12,12 +12,16 @@
   <package id="Microsoft.AspNet.Mvc.ru" version="5.2.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor.ru" version="3.2.4" targetFramework="net472" />
+  <package id="Microsoft.AspNet.SignalR" version="2.4.1" targetFramework="net472" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.4.1" targetFramework="net472" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.4.1" targetFramework="net472" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.4.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net472" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client.ru" version="5.2.4" targetFramework="net472" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core.ru" version="5.2.4" targetFramework="net472" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost.ru" version="5.2.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages.ru" version="3.2.4" targetFramework="net472" />
