--- a/FoodDelivery.WebUI/Web.config
+++ b/FoodDelivery.WebUI/Web.config
@@ -60,17 +60,16 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
+  <!--<connectionStrings>
     <add name="EFDbContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=FoodDelivery;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
-  <!--<connectionStrings>
+  </connectionStrings>-->
+  <connectionStrings>
+    <add name="IdentityDbContext" connectionString="Server=tcp:primakov.database.windows.net,1433;Initial Catalog=FoodDelivery.Identity;Persist Security Info=False;User ID=primakov127;Password=fDj_32srGF2sotF1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
     <add name="EFDbContext" connectionString="Server=tcp:primakov.database.windows.net,1433;Initial Catalog=FoodDelivery;Persist Security Info=False;User ID=primakov127;Password=fDj_32srGF2sotF1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
-  </connectionStrings>-->
-  <!--<connectionStrings>
-    <add name="EFDbContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Test;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>-->
+  </connectionStrings>
+
   
-<system.webServer>
+  <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
