--- a/FoodDelivery.DesktopUI/App.config
+++ b/FoodDelivery.DesktopUI/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="api" value="http://localhost:1937/" />
+    <add key="api" value="https://primakovfooddelivery.azurewebsites.net/" />
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
